# audioeq-android

./: gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BiquadFilter.h  CMakeLists.txt  DspEngine.cpp  DspEngine.h  JniBridge.cpp
app/src/main/java/com/audioeq/: AudioEqApplication.kt  MainActivity.kt
app/src/main/java/com/audioeq/audio/: AudioAccessibilityService.kt  AudioSessionManager.kt  AudioSessionReceiver.kt  AudioSessionService.kt  DspBridge.kt  HeadphoneProfileManager.kt  SignalGenerator.kt  SystemAudioService.kt
app/src/main/java/com/audioeq/data/db/: AudioEqDatabase.kt
app/src/main/java/com/audioeq/data/export/: PresetExportImport.kt
app/src/main/java/com/audioeq/data/model/: EffectParams.kt  EqBand.kt  Preset.kt
app/src/main/java/com/audioeq/data/repository/: PresetRepository.kt
app/src/main/java/com/audioeq/ui/components/: AudioEqTileService.kt  AudioEqWidgetProvider.kt  BottomNav.kt  EqSlider.kt  (+3 more)
app/src/main/java/com/audioeq/viewmodel/: CompressorViewModel.kt  EffectsViewModel.kt  EqualizerViewModel.kt  HomeViewModel.kt  LimiterViewModel.kt  PresetViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_quick_tile.xml  widget_button_bg.xml  widget_glass_background.xml
app/src/main/res/layout/: widget_audio_eq_compact.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  audio_eq_widget_info.xml  backup_rules.xml  data_extraction_rules.xml
(+17 files in other folders)
